<resources>
    <string name="app_name">MaterialWeather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_exit">退出</string>


    <!--add_place-->
    <string name="add_place_label">添加城市</string>
    <string name="add_place_province">省份</string>
    <string name="add_place_city">城市</string>
    <string name="add_place_county">地区</string>
    <string name="add_place_get_place_fail">获取%s失败，请检查网络</string>
    <string name="add_place_refresh_fail">刷新失败，请检查网络</string>
    <string name="add_place_locate">正在定位</string>


    
    <!--weather-->
    <string name="weather_comf">舒适度指数</string>
    <string name="weather_cw">洗车指数</string>
    <string name="weather_drsg">穿衣指数</string>
    <string name="weather_flu">感冒指数</string>
    <string name="weather_sport">运动指数</string>
    <string name="weather_trav">旅游指数</string>
    <string name="weather_uv">紫外线指数</string>

    <string name="weather_now">实况天气</string>
    <string name="weather_fl">体感温度：</string>
    <string name="weather_hum">相对湿度：</string>
    <string name="weather_pcpn">降水量：</string>
    <string name="weather_pres">气压：</string>
    <string name="weather_tmp">温度：</string>
    <string name="weather_vis">能见度：</string>

    <string name="weather_wind">风力方向</string>
    <string name="weather_deg">风向：</string>
    <string name="weather_dir">风向：</string>
    <string name="weather_sc">风力：</string>
    <string name="weather_spd">风速：</string>




    <!--daily-->
    <string name="daily_mr">月升时间：</string>
    <string name="daily_ms">月落时间：</string>
    <string name="daily_sr">日出时间：</string>
    <string name="daily_ss">日落时间：</string>
    <string name="daily_txt_d">白天天气状况：</string>
    <string name="daily_txt_n">夜间天气状况：</string>
    <string name="daily_hum">相对湿度：</string>
    <string name="daily_pcpn">降水量：</string>
    <string name="daily_pop">降水概率：</string>
    <string name="daily_pres">气压：</string>
    <string name="daily_max">最高温度：</string>
    <string name="daily_min">最低温度：</string>
    <string name="daily_deg">风向：</string>
    <string name="daily_dir">风向：</string>
    <string name="daily_sc">风力：</string>
    <string name="daily_spd">风速：</string>



    <!--hour-->
    <string name="hour_txt">天气状况：</string>
    <string name="hour_hum">相对湿度：</string>
    <string name="hour_pop">降水概率：</string>
    <string name="hour_pres">气压：</string>
    <string name="hour_tmp">温度：</string>
    <string name="hour_deg">风向：</string>
    <string name="hour_dir">风向：</string>
    <string name="hour_sc">风力：</string>
    <string name="hour_spd">风速：</string>
    
    
    
</resources>
